# how_i_learned_cmake

./: README.md
cmake-3.24.1-tutorial-source/Step12/: CMakeLists.txt  Tutorial-1.0-Linux.sh  Tutorial-1.0-Linux.tar.Z
cmake-3.24.1-tutorial-source/Step12/MathFunctions/: CMakeLists.txt
cmake-3.24.1-tutorial-source/Step12/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets-release.cmake
cmake-3.24.1-tutorial-source/Step12/_CPack_Packages/Linux/STGZ/Tutorial-1.0-Linux/lib/: libMathFunctionsd.so.1
cmake-3.24.1-tutorial-source/Step12/_CPack_Packages/Linux/TZ/Tutorial-1.0-Linux/lib/: libMathFunctions.so.1.0.0  libMathFunctionsd.so.1.0.0
cmake-3.24.1-tutorial-source/Step12/_CPack_Packages/Linux/TZ/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets-debug.cmake  MathFunctionsTargets.cmake
cmake-3.24.1-tutorial-source/Step4/: CMakeLists.txt
projects/calculator/: CMakeLists.txt  CalculatorConfig.h.in  License.txt  README.md  main.cxx
projects/calculator/CalculatorFunctions/: CMakeLists.txt  CalculatorFunctions.h  functions.cxx
